--- a/style.css
+++ b/style.css
@@ -71,3 +71,20 @@ img {
   height: 150px;
   margin: 10px;
 }
+
+@media screen and (max-width:425px) {
+    main {
+      width: 100%;
+      display: block;
+    }
+  
+    .box {
+      width: 90%;
+      margin: 0 auto 20px;
+    }
+  
+    .box:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
